# spatial-evolution-simulation-runner

./: .gitignore  CITATION.cff  Dockerfile  LICENSE  README.md  TEST_RESULTS.txt  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml
configs/: three_deme_example.yml  two_deme_migration_sweep.yml
results/demo/: results.csv  summary.md
src/multipop_runner/: __init__.py  cli.py  config.py  cppgen.py  models.py  parsers.py  report.py  runner.py
tests/: test_config.py  test_cpp_syntax.py  test_cppgen.py  test_demo.py  test_parsers.py
